syntax="proto3";

package com.hyj.netty.codec.protobuf;

option java_package="com.hyj.netty.codec.protobuf";
option java_outer_classname="SubscribeReqProto";

message SubscribeReq{
    int32 subReqId = 1;
    string userName = 2;
    string productName = 3;
    repeated string address = 4;
}