syntax="proto3";

package com.hyj.netty.codec.protobuf;

option java_package="com.hyj.netty.codec.protobuf";
option java_outer_classname="SubscribeRespProto";

message SubscribeResp{

    int32 subReqId = 1;
    int32 respCode = 2;
    string desc = 3;
}